FIX: uneven checkbox text in some devices

--- a/wagtail/admin/static_src/wagtailadmin/css/normalize.css
+++ b/wagtail/admin/static_src/wagtailadmin/css/normalize.css
@@ -450,7 +450,7 @@ input[type="submit"] {
 input[type='checkbox'],
 input[type='radio'] {
   box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
+  padding: 0 5px; /* 2 */
   *height: 13px; /* 3 */
   *width: 13px; /* 3 */
 }
